Seeders made, more design fixes

--- a/Correctrly_structured_project/src/views/pages/AboutUs.ejs
+++ b/Correctrly_structured_project/src/views/pages/AboutUs.ejs
@@ -20,16 +20,16 @@
             
             <div class="row justify-content-center"> <!-- Center the row -->
                 
-                <div tabindex="0" class="col-md-10 ml-3 col-lg-5 bg-light p-4 mt-5 mr-3" > <!-- General Information -->
+                <div tabindex="0" class="col-md-10 ml-3 col-lg-5 bg-light p-4 mt-5 mr-3 rounded" > <!-- General Information -->
                     <h2>General information</h2>
                     
                     <p>We offer a wide range of car repair and maintenance services to keep your vehicle in top condition. Our expert technicians are here to help you with any car-related issues.</p>
                     <p>We offer all-around top prices for the services we offer; if you know what you need, we can give you an estimate on pricing instantly.</p>
                 </div>
-                <div class="w-120 my-3"></div> <!-- Gap -->
-                <div class="col-md-10 col-lg-5 ml-3 mt-5 mr-3"> <!-- Visit Our Location -->
+                <div class="w-120 my-3 "></div> <!-- Gap -->
+                <div class="col-md-10 col-lg-5 ml-3 mt-5 mr-3 "> <!-- Visit Our Location -->
                     <div class="row">
-                        <div class="col-12 bg-light p-4 d-flex flex-lg-row flex-column justify-content-between align-items-start"> <!-- Responsive Flex Container -->
+                        <div class="col-12 bg-light p-4 d-flex flex-lg-row flex-column justify-content-between align-items-start rounded"> <!-- Responsive Flex Container -->
                             <div> <!-- Text and Address -->
                                 <h2>Visit us</h2>
                                 <p>You can find us at the following address:</p>
@@ -51,9 +51,9 @@
     
 
 <section class="py-4">
-    <div tabindex=0 class="container text-white bg-light">
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-lg-6 p-4"> <!-- Contact Us Text -->
+    <div tabindex=0 class="container text-white bg-light rounded">
+        <div class="row justify-content-center ">
+            <div class="col-md-10 col-lg-6 p-4 "> <!-- Contact Us Text -->
                 <h2>Contact Us</h2>
                 <p>If you have any questions or need assistance, feel free to get in touch with our team. We're here to help you with your car repair needs.</p>
                 <p>Or you can call us at +371 29 392 382</p>
