--- a/Correctrly_structured_project/src/views/pages/Admin.ejs
+++ b/Correctrly_structured_project/src/views/pages/Admin.ejs
@@ -46,12 +46,12 @@
         <h2>Succesfully gave administrator permissions</h2>
     </div>
     <div>
-        <div class="container my-4  customContainer bg-light mx-80">
-            <h2 class="text-center mb-4 text-white" id="TitleHeader">Projects</h2>
+        <div class="container my-4  customContainer bg-light rounded mx-80">
+            <h2 class="text-center mb-4 text-white mt-3" id="TitleHeader">Projects</h2>
             <div class="container-fluid">
                 <div class="row">
                     <!-- Sidebar -->
-                    <div class="col-lg-2 col-md-4 col-sm-12 bg-light p-4 d-flex flex-column justify-content-start"
+                    <div class="col-lg-2 col-md-4 col-sm-12 bg-light rounded p-4 d-flex flex-column justify-content-start"
                         id="sidebar">
                         <h3 class="text-center mb-4 text-white ">Admin Panel</h3>
                         <!-- Users Section -->
@@ -167,7 +167,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div id="inputNewEndDate" class="table-responsive bg-light nodisplay">
+                    <div id="inputNewEndDate" class="table-responsive bg-light  rounded nodisplay">
                         <table class="table table-bordered table-hover">
                             <thead class="thead-dark">
                                 <tr>
@@ -223,7 +223,7 @@
                     </div>
 
 
-                    <div class="col-md-3  bg-light text-white m-auto nodisplay maxw20 "
+                    <div class="col-md-3  bg-light rounded text-white m-auto nodisplay maxw20 "
                         id="registrationForm">
                         <form class="mt-3">
 
