--- a/Correctrly_structured_project/src/views/pages/Profile.ejs
+++ b/Correctrly_structured_project/src/views/pages/Profile.ejs
@@ -20,7 +20,7 @@
   <div id="customPasswordChangeAlert" class="custom-alert nodisplay">
     <h2>Succesfully changed password!</h2>
   </div>
-  <section class="container col-md-3  mt-5 p-4 text-white bg-light">
+  <section class="container col-md-3  mt-5 p-4 text-white bg-light rounded-lg">
     <div id="profile-info" class="m-2">
       <h2 tabindex="0" class="mb-3 ">User Profile</h2>
       <p tabindex="0" id="name" class="lead">Name: John Doe</p>
