--- a/Correctrly_structured_project/src/views/pages/Settings.ejs
+++ b/Correctrly_structured_project/src/views/pages/Settings.ejs
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <div class="container col-lg-3 mt-5 text-white bg-light">
+    <div class="container col-lg-3 mt-5 text-white bg-light rounded-lg">
         <h1 class="m-2 text-center">Settings</h1>
         <div class="container m-auto mx-80 mix-40 m-2 p-2">
             <div class="form-group text-white">
