--- a/Correctrly_structured_project/src/views/pages/home.ejs
+++ b/Correctrly_structured_project/src/views/pages/home.ejs
@@ -83,8 +83,8 @@
     <span>↓ Services ↓</span>
   </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div tabindex=0  id="Services" class=" container-xxl text-white">
-  <div class="container bg-light max-width80" >
+<div tabindex=0  id="Services" class=" container-xxl  text-white">
+  <div class="container bg-light max-width80 rounded" >
       <div class="text-center mx-auto mb-4 max-width75" >
           <h1>We offer top tier car repairs</h1>
       </div>
@@ -92,7 +92,7 @@
           <div class="col-md-6 col-lg-4 " >
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Overall_Checkup">
-                  <img class="img-fluid ml-4" src="/images/Overall_Checkup.png" alt="Overall checkup image">
+                  <img class="img-fluid ml-4 rounded" src="/images/Overall_Checkup.png" alt="Overall checkup image">
                   <div class="position-relative p-4">
                       <div class="service-icon">
                           <i class="fa fa-solar-panel fa-3x"></i>
@@ -107,7 +107,7 @@
           <div class="col-md-6 col-lg-4 " >
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Car_Painting">
-                  <img class="img-fluid ml-4" src="/images/Car_Painting.png" alt="Car painting image">
+                  <img class="img-fluid ml-4 rounded" src="/images/Car_Painting.png" alt="Car painting image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-wind fa-3x"></i>
@@ -121,7 +121,7 @@
           <div class="col-md-6 col-lg-4 ">
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Rust_Removal">
-                  <img class="img-fluid ml-4" src="/images/Rust_Removal.webp" alt="Rust Removal image">
+                  <img class="img-fluid ml-4 rounded" src="/images/Rust_Removal.webp" alt="Rust Removal image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-lightbulb fa-3x"></i>
@@ -135,7 +135,7 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Tuning">
-                  <img class="img-fluid ml-4" src="/images/Tuning.png" alt="Tuning image">
+                  <img class="img-fluid ml-4 rounded" src="/images/Tuning.png" alt="Tuning image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-solar-panel fa-3x"></i>
@@ -149,7 +149,7 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
               <div class="service-item rounded overflow-hidden">
                 <a class="text-light" href="#Custom_Part_Insertion">
-                  <img class="img-fluid ml-4" src="/images/Custom_Part_Insertion.png" alt="Custom part insertion image">
+                  <img class="img-fluid ml-4 rounded" src="/images/Custom_Part_Insertion.png" alt="Custom part insertion image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-wind fa-3x"></i>
@@ -163,7 +163,7 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp " data-wow-delay="0.5s" id="EstimatorInfo">
               <div class="service-item rounded overflow-hidden nodisplay" id="PriceEstimator" >
                 <a class="text-light" href="/Estimator">
-                  <img class="img-fluid ml-4" src="/images/Price_Calculation.webp" alt="Automatic price estimator image">
+                  <img class="img-fluid ml-4 rounded" src="/images/Price_Calculation.webp" alt="Automatic price estimator image">
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-lightbulb fa-3x"></i>
@@ -175,7 +175,7 @@
               </div>
               <div class="service-item rounded overflow-hidden" id="PriceEstimatorGuest" >
                 <a class="text-light">
-                  <img class="img-fluid ml-4" src="/images/Price_Calculation_Guest.webp" alt="Log in to access this function image"> 
+                  <img class="img-fluid ml-4 rounded" src="/images/Price_Calculation_Guest.webp" alt="Log in to access this function image"> 
                   <div class="position-relative p-4 pt-0">
                       <div class="service-icon">
                           <i class="fa fa-lightbulb fa-3x"></i>
