--- a/Correctrly_structured_project/src/views/pages/Estimator.ejs
+++ b/Correctrly_structured_project/src/views/pages/Estimator.ejs
@@ -21,9 +21,9 @@
 
 <body>
 
-    <div class="container text-white mt-5 bg-light  ">
-        <div class="row">
-        <div class="col-md-8 p-3">
+    <div class="container text-white mt-5 bg-light rounded ">
+        <div class="row p-4">
+        <div class="col-md-8">
             <h2 tabindex=0>Select Car Areas to Paint</h2>
             <div class="mt-3 bg-dark" id="imageContainer">
                 <img class="mt-3" src="../images/car_template.png" alt="Your Image" id="carImage" usemap="#image-map" />
@@ -74,12 +74,14 @@
                         shape="polygon">
                 </map>
             </div>
+            <div class="text-center">
             <button id="select-all-button" class="btn btn-outline-secondary text-white mt-2">Select All</button>
             <button id="deselect-all-button" class="btn  btn-outline-secondary text-white mt-2">Deselect All</button>
             <p>Estimated Price: $<span id="price">0.00</span></p>
+            </div>
         </div>
 
-        <div class="text-white p-3" >
+        <div class="text-white ml-4" >
             <h2>Choose services</h2>
             <form id="repairForm" class="mt-3">
                 <div class="form-check">
