--- a/Correctrly_structured_project/src/views/pages/Login.ejs
+++ b/Correctrly_structured_project/src/views/pages/Login.ejs
@@ -28,8 +28,8 @@
 
     <div class="container text-white mt-5 mx-80">
         <div class="row justify-content-center">
-            <div class="col-md-4 bg-light">
-                <form id="loginForm">
+            <div class="col-md-4 bg-light rounded-lg">
+                <form class="p-4" id="loginForm">
                     <h1 class="text-center">Login</h1>
                     <div class="form-group">
                         <div id="username-red" class="row ml-0 mb-2" for="username">
