--- a/Correctrly_structured_project/src/views/pages/SignUp.ejs
+++ b/Correctrly_structured_project/src/views/pages/SignUp.ejs
@@ -22,9 +22,9 @@
     </div>
     <div class="container mx-80 mt-5">
         <div class="row justify-content-center  text-white">
-            <div class="col-md-4 bg-light">
-                <h1 class="text-center">Sign Up</h1>
-                <form id="signupForm" action="/signup" method="post">
+            <div class="col-md-4 bg-light rounded">
+                <form class="p-4" id="signupForm" action="/signup" method="post">
+                    <h1 class="text-center">Sign Up</h1>
                     <div class="form-group">
                         <label class="row ml-0 mb-2 " id='name-red' for="name">Name <span class="ml-1 nodisplay"
                                 id="EmptyName" ><b>- Enter a name</b></label>
