--- a/Correctrly_structured_project/src/views/pages/UserAppointment.ejs
+++ b/Correctrly_structured_project/src/views/pages/UserAppointment.ejs
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div class="container my-4 bg-light">
+    <div class="container my-4 bg-light rounded">
         <h2 class="text-center mb-4 text-white">Your Appointments</h2>
 
         <!-- Table to display appointment data -->
