--- a/Correctrly_structured_project/src/views/pages/WorkerPage.ejs
+++ b/Correctrly_structured_project/src/views/pages/WorkerPage.ejs
@@ -36,7 +36,7 @@
     
 </style>
 <body>
-    <div class="container my-4 bg-light">
+    <div class="container my-4 bg-light rounded">
         <h2 class="text-center mb-4 text-white" id="TitleHeader">Projects</h2>
 
         <!-- Table to display appointment data -->
