New table for overall status and ability for worksesrs and admins to change project status between, in progress, no arrival, cancelled and completed

--- a/Correctrly_structured_project/src/views/pages/AboutUs.ejs
+++ b/Correctrly_structured_project/src/views/pages/AboutUs.ejs
@@ -78,7 +78,12 @@
         </div>
     </div>
 </section>
-
+<div class="footer" >
+    <div class="container">
+        <p>&copy; 2023 Car Repair Shop - Odre, LV-3285</p>
+        <p>Contacts: velderis@gmail.com or call us +371 29 392 382</p>
+    </div>
+</div>
     
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=<%= apiKey %>&callback=initMap" nonce="<%= nonce %>">
