--- a/Correctrly_structured_project/src/views/pages/Admin.ejs
+++ b/Correctrly_structured_project/src/views/pages/Admin.ejs
@@ -100,6 +100,7 @@
                                         Date
                                     </th>
                                     <th class="align-middle" scope="col" data-column="ProjectInfo">Project Info</th>
+                                    <th class="align-middle" scope="col" data-column="Status">Overall status</th>
                                     <th class="align-middle" scope="col" data-column="Delayed">Delay Status</th>
                                 </tr>
                             </thead>
@@ -202,19 +203,19 @@
                         </table>
                     </div>
 
-                    <div id="searchUser" class="col-sm-3 m-auto text-center nodisplay">
+                    <div id="searchUser" class="col-sm-3 m-auto text-center nodisplay pb-4">
                         <span id="InvalidID" class="nodisplay text-danger"><b>Invalid ID</b></span>
                         <input type="text" id="userIDInput" class="form-control" placeholder="Enter User ID">
                         <button class="btn btn-outline-primary mt-2" id="searchUserButton">Search</button>
                     </div>
 
-                    <div id="searchUserByEmail" class="col-sm-4 m-auto text-center nodisplay">
+                    <div id="searchUserByEmail" class="col-sm-4 m-auto text-center nodisplay pb-4">
                         <span id="InvalidEmail" class="nodisplay text-danger"><b>Invalid Email</b></span>
                         <input type="text" id="userEmailInput" class="form-control" placeholder="Enter User's email">   
                         <button class="btn btn-outline-primary mt-2" id="searchUserByEmailButton">Search</button>
                     </div>
 
-                    <div id="searchProject" class="col-sm-3 m-auto text-center nodisplay">
+                    <div id="searchProject" class="col-sm-3 m-auto text-center nodisplay pb-4">
                         <span id="InvalidProjectID" class="nodisplay text-danger" ><b>Invalid
                                 ID</b></span>
 
