--- a/Correctrly_structured_project/src/views/pages/WorkerPage.ejs
+++ b/Correctrly_structured_project/src/views/pages/WorkerPage.ejs
@@ -37,7 +37,7 @@
 </style>
 <body>
     <div class="container my-4 bg-light rounded">
-        <h2 class="text-center mb-4 text-white" id="TitleHeader">Projects</h2>
+        <h2 class="text-center text-white p-3   " id="TitleHeader">Projects</h2>
 
         <!-- Table to display appointment data -->
         <div  id="ProjectDataContainer" class="overflow-X table-responsive text-white">
@@ -48,6 +48,7 @@
                         <th class="align-middle" scope="col" data-column="StartDate">Start Date</th>
                         <th class="align-middle" scope="col" data-column="EndDateProjection">Projected End Date</th>
                         <th class="align-middle" scope="col" data-column="ProjectInfo">Project Info</th>
+                        <th class="align-middle" scope="col" data-column="Status">Overall status</th>
                         <th class="align-middle" scope="col" data-column="Delayed">Delay Status</th>
                     </tr>
                 </thead>
