--- a/Correctrly_structured_project/src/views/pages/home.ejs
+++ b/Correctrly_structured_project/src/views/pages/home.ejs
@@ -331,16 +331,15 @@
     </section>
 </main>
 
-    <div class="footer max-width95" >
-        <div class="container">
-            <p>&copy; 2023 Your Website - Additional Information Here</p>
-            <p>Contact: velderis@gmail.com</p>
-
-        </div>
+<div class="footer" >
+    <div class="container">
+        <p>&copy; 2023 Car Repair Shop - Odre, LV-3285</p>
+        <p>Contacts: velderis@gmail.com or call us +371 29 392 382</p>
     </div>
+</div>
 
     <script src="/js/home.js" nonce="<%= nonce %>"></script>
-</body>
+</body> 
 </html>
 
 
