--- a/Correctrly_structured_project/src/views/partials/header.ejs
+++ b/Correctrly_structured_project/src/views/partials/header.ejs
@@ -140,7 +140,7 @@
                             <a class=" dropdown-item text-white" href="/auth/ProfilePage">Account Info</a>
                             <div class="bg-gray">
                             <a class="  dropdown-item text-white " href="/auth/UserAppointment">Appointments</a>
-                            <a class="  dropdown-item text-white " href="/auth/Settings">Settings</a>
+                            <a class="  dropdown-item text-white " href="/auth/Settings">Notifications</a>
                             <a id="AdminMenu" class="  dropdown-item text-white nodisplay "
                                 href="/admin/admin-dashboard">Admin panel</a>
                             <a id="Statistics" class="    dropdown-item text-white nodisplay "
