--- a/Correctrly_structured_project/src/views/pages/Estimator.ejs
+++ b/Correctrly_structured_project/src/views/pages/Estimator.ejs
@@ -22,7 +22,7 @@
 <body>
 
     <div class="container text-white mt-5 bg-light rounded ">
-        <div class="row p-4">
+        <div class="row pt-4 pl-4">
         <div class="col-md-8">
             <h2 tabindex=0>Select Car Areas to Paint</h2>
             <div class="mt-3 bg-dark" id="imageContainer">
