--- a/Correctrly_structured_project/src/views/pages/Notif_settings.ejs
+++ b/Correctrly_structured_project/src/views/pages/Notif_settings.ejs
@@ -17,6 +17,7 @@
 <body>
     <div class="container col-lg-3 mt-5  p-4 text-white bg-light rounded-lg">
         <h1 class="m-2 text-center">Notification settings</h1>
+
         <div class="container m-auto mx-80 mix-40 m-2 p-2">
             <div class="form-group text-white">
                 <label for="Notifications">Special deal notifications</label>
@@ -30,11 +31,12 @@
             <label for="Reminders">Appointment reminders</label>
                 <select class="form-control" id="repairType" name="repairType" required>
                     <option value="None">No notifications</option>
-                    <option value="Offers">Special deals/offers</option>
-                    <option value="OilChange">Oil change reminders</option>
-                    <option value="ALL">All notifications</option>
+                    <option value="Day">Remind me 1 day before</option>
+                    <option value="Hour">Remind me 1 hour before</option>
+                    <option value="Both">Remind me both 1 day and 1 hour before</option>                    
                 </select>
-                <button type="submit" class="btn btn-secondary btn-block mt-3 mb-3">Save settings</button>
+                <p class="mt-3">*Notifications are sent by email</p>
+                <button type="submit" class="btn btn-secondary btn-block">Save settings</button>
         </div>
     </div>
         
