Translations through js too, need to test all of them next

--- a/Correctrly_structured_project/src/views/layout.ejs
+++ b/Correctrly_structured_project/src/views/layout.ejs
@@ -6,7 +6,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/images/Icon.png">
+<!DOCTYPE html>
+<html lang="<%= language %>">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/images/Icon.png">
+    <script nonce="<%= nonce %>">
+        window.translations = {
+            en: <%- JSON.stringify(i18n.getCatalog('en')) %>,
+            lv: <%- JSON.stringify(i18n.getCatalog('lv')) %>,
+            de: <%- JSON.stringify(i18n.getCatalog('de')) %>,
+            ru: <%- JSON.stringify(i18n.getCatalog('ru')) %>
+        };
+        window.currentLanguage = '<%= language %>';
+    </script>
 </head>
 
 <body>
