Home page carousel finished  next step is advantages

--- a/CarRepairShop/src/views/pages/Admin.ejs
+++ b/CarRepairShop/src/views/pages/Admin.ejs
@@ -71,7 +71,7 @@
                             <button id="findProjectByID" class="btn btn-outline-secondary text-white"><%= __('View projects by ID') %></button>
                             <button id="viewDelayedProjects" class="btn btn-outline-secondary text-white"><%= __('View delayed projects') %></button>
                             <button id="viewActiveProjects" class="btn btn-outline-secondary text-white"><%= __('View active projects') %></button>
-                            <button id="viewFinishedProjects" class="btn btn-outline-secondary text-white"><%= __('View projects to be finished today') %></button>
+                            <button id="viewFinishedProjects" class="btn btn-outline-secondary text-white"><%= __('View finished projects') %></button>
                         </div>
                     </div>
 
