--- a/CarRepairShop/src/views/pages/Estimator.ejs
+++ b/CarRepairShop/src/views/pages/Estimator.ejs
@@ -82,33 +82,33 @@
                 <div class="form-check">
                     <input alt="<%= __('Overall checkup service selection') %>" tabindex="0" type="checkbox" class="form-check-input"
                         id="OverallCheckup" value="150">
-                    <label class="form-check-label" for="OverallCheckup"><%= __('Overall Checkup') %> - $<span
+                    <label class="form-check-label" for="OverallCheckup"><%= __('Overall Checkup') %> - €<span
                             id="CheckupCost">150.00</span></label>
                 </div>
                 <div class="form-check">
                     <input alt="<%= __('Rust removal service selection') %>" tabindex="0" type="checkbox" class="form-check-input"
                         id="RustRemoval" value="500">
-                    <label class="form-check-label" for="RustRemoval"><%= __('Rust Removal') %> - $<span
+                    <label class="form-check-label" for="RustRemoval"><%= __('Rust Removal') %> - €<span
                             id="RustRemovalCost">500.00</span></label>
                 </div>
                 <div class="form-check">
                     <input alt="<%= __('Tuning service selection') %>" tabindex="0" type="checkbox" class="form-check-input"
                         id="Tuning" value="1500">
-                    <label class="form-check-label" for="Tuning"><%= __('Tuning') %> - $<span id="TuningCost">1500.00</span></label>
+                    <label class="form-check-label" for="Tuning"><%= __('Tuning') %> - €<span id="TuningCost">1500.00</span></label>
                 </div>
                 <div class="form-check">
                     <input alt="<%= __('Custom part insertion service selection') %>" tabindex="0" type="checkbox"
                         class="form-check-input" id="CustomPartInsertion" value="150">
-                    <label class="form-check-label" for="CustomPartInsertion"><%= __('Custom Part Insertion') %> - $<span
+                    <label class="form-check-label" for="CustomPartInsertion"><%= __('Custom Part Insertion') %> - €<span
                             id="CustomPartInsertionCost">150.00</span></label>
                 </div>
                 <div class="form-check">
                     <input alt="<%= __('Paint job service selection') %>" tabindex="0" type="checkbox" class="form-check-input"
                         id="Pricing" value="0">
-                    <label class="form-check-label" for="Pricing"><%= __('Paint job') %> - $<span id="paintPrice">0.00</span></label>
+                    <label class="form-check-label" for="Pricing"><%= __('Paint job') %> - €<span id="paintPrice">0.00</span></label>
                 </div>
             </form>
-            <p tabindex="0" id="totalPrice" class="mt-4 "><%= __('Estimated Price: $') %>0.00</p>
+            <p tabindex="0" class="mt-4 "><%= __('total_price') %><span id="totalPrice">0.00</p>
         </div>
     </div>
     </div>
