--- a/CarRepairShop/src/views/pages/UserAppointment.ejs
+++ b/CarRepairShop/src/views/pages/UserAppointment.ejs
@@ -22,7 +22,7 @@
                         <th class="align-middle" scope="col"><%= __('Start Date') %></th>
                         <th class="align-middle" scope="col"><%= __('Projected End Date') %></th>
                         <th class="align-middle" scope="col"><%= __('Project Info') %></th>
-                        <th class="align-middle" scope="col"><%= __('Delay Status') %></th>
+                        <th class="align-middle" scope="col"><%= __('Delayed Status') %></th>
                     </tr>
                 </thead>
                 <tbody id="appointment-table-body">
